--- a/style.css
+++ b/style.css
@@ -6,7 +6,5 @@ html, body {
     margin-left: 25%;
     margin-right: 25%;
     margin-top: 100px;
-    border: 2px solid black;
+    border: 2px solid rgb(11, 226, 11);
   }
-  
-  
